--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -56,7 +56,7 @@
    ========================================================================== */
 
 @import "core/base";
-// @import "core/collecticons"; // Webfont icon library: Collecticons
+@import "core/collecticons"; // Webfont icon library: Collecticons
 @import "core/typography";
 @import "core/media";
 @import "core/utilities";
@@ -67,4 +67,4 @@
 
 @import "global/buttons";
 @import "global/page";
-// @import "global/inpage";
+@import "global/inpage";
