--- a/app/assets/styles/global/_page.scss
+++ b/app/assets/styles/global/_page.scss
@@ -17,13 +17,13 @@
   padding: ($global-spacing * 1.5) 0;
   box-shadow: 0 8px 32px 0 $base-alpha-color;
 
-  > .inner {
-    @extend .row, .row--centered;
+  a {
+    color: inherit;
+    display: inline-block;
   }
 
-  a {
-    display: block;
-    color: inherit;
+  > .inner {
+    @extend .row, .row--centered;
   }
 }
 
@@ -49,6 +49,11 @@
   font-weight: $base-font-bold;
   font-size: 0.75rem;
   line-height: 1rem;
+
+  a {
+    color: inherit;
+    display: inline-block;
+  }
 
   > li {
     float: left;
@@ -80,7 +85,7 @@
   padding: 2rem 0;
   font-size: 0.875rem;
   line-height: 1.25rem;
-  color: tint($base-color, 48%);
+  color: tint($base-color, 64%);
   text-align: right;
   box-shadow: inset 0 1px 0 0 rgba($base-color, 0.12);
 
