--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -68,3 +68,9 @@
 @import "global/buttons";
 @import "global/page";
 @import "global/inpage";
+
+
+/* Projects
+   ========================================================================== */
+
+@import "projects/global";
