--- a/app/assets/styles/settings/_mixins.scss
+++ b/app/assets/styles/settings/_mixins.scss
@@ -99,45 +99,50 @@
 
   @if $style == "filled" {
     @if $brightness == "light" {
-      $text-color: $base-font-color;
+      $text-color: $link-color;
       $bg-color: $color;
-      $bg-color-hover: shade($color, 4%);
-      $bg-color-active: shade($color, 8%);
-      $border-shadow-color: rgba($base-color, 0.12);
-      $inner-shadow-color: rgba($base-color, 0.12);
+      $bg-color-hover: shade($color, 2%);
+      $bg-color-active: shade($color, 4%);
+      $border-shadow-color: rgba($base-color, 0.16);
+      $inner-shadow-color: rgba($base-color, 0.16);
     }
     @else if $brightness == "dark" {
       $text-color: #fff;
       $bg-color: $color;
-      $bg-color-hover: shade($color, 8%);
-      $bg-color-active: shade($color, 16%);
-      $border-shadow-color: rgba($base-color, 0.24);
-      $inner-shadow-color: rgba($base-color, 0.24);
+      $bg-color-hover: shade($color, 4%);
+      $bg-color-active: shade($color, 8%);
+      $border-shadow-color: rgba($base-color, 0.16);
+      $inner-shadow-color: rgba($base-color, 0.16);
 
       @extend .antialiased;
     }
     @else {
       @error "Invalid brightness property for button variation.";
     }
-
-    box-shadow: inset 0 -3px 0 0 $inner-shadow-color;
-    .drop--open > &,
-    &.button--active,
-    &:active {
-      box-shadow: inset 0 3px 0 0 $inner-shadow-color;
-    }
   }
-  @else if $style == "unbounded" {
+  @else if $style == "bounded" or $style == "unbounded" {
     $text-color: $color;
     $bg-color: rgba($color, 0);
     $bg-color-hover: rgba($color, 0.08);
     $bg-color-active: rgba($color, 0.16);
+    
+    @if $style == "bounded" {
+      box-shadow: inset 0 0 0 1px $border-shadow-color;
+      .drop--open > &,
+      &.button--active,
+      &:active {
+        box-shadow: inset 0 0 0 1px $border-shadow-color;
+      }
+    }
   }
+
   @else {
     @error "Invalid style property for button variation.";
   }
 
   background-color: $bg-color;
+  box-shadow: 0 1px 2px 1px $inner-shadow-color;
+
   &, &:visited {
     color: $text-color;
   }
@@ -149,5 +154,6 @@
   &.button--active:hover,
   &:active {
     background-color: $bg-color-active;
+    box-shadow: inset 0 1px 2px 0 $inner-shadow-color;
   }
 }
