Structure language switcher

--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -66,6 +66,7 @@
    ========================================================================== */
 
 @import "global/buttons";
+@import "global/drops";
 @import "global/page";
 @import "global/inpage";
 
