--- a/app/assets/styles/global/_page.scss
+++ b/app/assets/styles/global/_page.scss
@@ -41,7 +41,11 @@
   margin: 0;
 }
 
-.nav-menu {
+.nav-language-switcher {
+ float: left;
+}
+
+.nav-global-menu {
   list-style: none;
   margin: 0;
   padding: 0;
@@ -49,6 +53,7 @@
   font-weight: $base-font-bold;
   font-size: 0.75rem;
   line-height: 1rem;
+  float: right;
 
   a {
     color: inherit;
