--- a/app/assets/styles/global/_page.scss
+++ b/app/assets/styles/global/_page.scss
@@ -15,7 +15,7 @@
   background: $accent-color;
   color: #fff;
   padding: ($global-spacing * 1.5) 0;
-  box-shadow: 0 8px 32px 0 $base-alpha-color;
+  box-shadow: 0 4px 8px -4px rgba($base-color, 0.48);
 
   a {
     color: inherit;
