--- a/app/assets/styles/core/_base.scss
+++ b/app/assets/styles/core/_base.scss
@@ -29,7 +29,7 @@ html {
 html {
   font-size: $root-font-size;
   /* Changes the default tap highlight to be completely transparent in iOS. */
-  -webkit-tap-highlight-color: rgba(0,0,0,0);
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
 }
 
 body {
