--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -67,6 +67,7 @@
 
 @import "global/buttons";
 @import "global/drops";
+@import "global/cards";
 @import "global/page";
 @import "global/inpage";
 
@@ -75,6 +76,7 @@
    ========================================================================== */
 
 @import "projects/global";
+@import "projects/hub";
 
 
 /* UhOh
