Style labels. Contribute to #4

--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -65,6 +65,7 @@
 /* Global
    ========================================================================== */
 
+@import "global/labels";
 @import "global/buttons";
 @import "global/drops";
 @import "global/cards";
