--- a/app/assets/styles/global/_cards.scss
+++ b/app/assets/styles/global/_cards.scss
@@ -182,3 +182,52 @@
     float: right;
   }
 }
+
+
+/* Card button
+   ========================================================================== */
+
+.card__button {
+  display: block;
+  width: 100%;
+  user-select: none;
+  text-align: center;
+  padding: $global-spacing;
+  box-shadow: 0 2px 8px 2px rgba($base-color, 0.12);
+  border-radius: $base-border-radius;
+  white-space: nowrap;
+  line-height: 1.75rem;
+  font-size: 1.25rem;
+  min-height: 18rem;
+  background: none; 
+  text-shadow: none;
+  border: 0;
+  font-weight: $base-font-bold;
+  cursor: pointer;
+  color: $link-color;
+  text-decoration: none;
+  transition: opacity 0.24s ease 0s;
+
+  &:hover {
+     opacity: 0.64;
+  }
+
+  &:active {
+    outline: none;
+    transform: translate(0, 1px);
+  }
+
+  &:focus {
+    outline: none; // This causes usability problems. Needs fixing.
+  }
+
+  &::before {
+    display: block;
+    margin: 0 auto ($global-spacing / 2) auto;
+    font-size: 4rem;
+  }
+}
+
+.card__button--add::before {
+  @extend %collecticon-sm-plus;
+}
