Display cards as flex

--- a/app/assets/styles/global/_cards.scss
+++ b/app/assets/styles/global/_cards.scss
@@ -207,6 +207,7 @@
   color: $link-color;
   text-decoration: none;
   transition: opacity 0.24s ease 0s;
+  background: #fff;
 
   &:hover {
      opacity: 0.64;
