Include modal styles

--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -69,6 +69,7 @@
 @import "global/buttons";
 @import "global/drops";
 @import "global/cards";
+@import "global/modals";
 @import "global/page";
 @import "global/inpage";
 
