--- a/app/assets/styles/global/_cards.scss
+++ b/app/assets/styles/global/_cards.scss
@@ -6,13 +6,15 @@
   position: relative;
   text-align: initial;
   font-size: 1rem;
-  line-height: 1.5rem;
+  line-height: 1.5;
+  display: flex;
 }
 
 .card__contents {
   position: relative;
   z-index: 1;
-  display: block;
+  display: flex;
+  flex-direction: column;
   background: #fff;
   box-shadow: 0 2px 8px 2px rgba($base-color, 0.12);
   border-radius: $base-border-radius;
@@ -42,7 +44,7 @@
 
 .card__media {
   position: relative;
-  margin: 0 (- $global-spacing) ($global-spacing / 2) (- $global-spacing);
+  margin: 0 (- $global-spacing) $global-spacing (- $global-spacing);
 
   img {
     position: relative;
@@ -67,8 +69,7 @@
   position: relative;
   overflow: hidden;
   background: tint($base-color, 96%);
-  margin: 0 0 $global-spacing 0;
-  border-radius: $base-border-radius $base-border-radius 0 0;
+  margin: 0;
   min-height: 4rem;
 
   &::before {
@@ -88,8 +89,16 @@
    ========================================================================== */
 
 .card__header {
+  flex: 1;
+  width: 100%;
   margin-bottom: $global-spacing;
 
+  > *:last-child {
+    margin-bottom: 0;
+  }
+}
+
+.card__headline {
   > *:last-child {
     margin-bottom: 0;
   }
@@ -116,6 +125,8 @@
    ========================================================================== */
 
 .card__body {
+  flex: 1;
+  width: 100%;
   margin-bottom: $global-spacing;
 
   > *:last-child {
@@ -144,7 +155,8 @@
 }
 
 .card__system-details {
-  margin-bottom: 0;
+  font-size: 0.75rem;
+  line-height: 1.25rem;
 
   dt {
     @extend .visually-hidden;
@@ -158,8 +170,6 @@
     @extend .heading-alt;
     position: relative;
     float: left;
-    font-size: 0.75rem;
-    line-height: 1.25rem;
     padding: 0 0 0 1.25rem;
 
     > span {
@@ -198,7 +208,6 @@
   white-space: nowrap;
   line-height: 1.75rem;
   font-size: 1.25rem;
-  min-height: 18rem;
   background: none; 
   text-shadow: none;
   border: 0;
