--- a/app/assets/styles/global/_drops.scss
+++ b/app/assets/styles/global/_drops.scss
@@ -34,7 +34,7 @@
   font-size: 1rem;
   line-height: 1.5;
   background: #fff;
-  box-shadow: 0 8px 16px 8px rgba($primary-color, 0.24);
+  box-shadow: 0 2px 12px 2px rgba($base-color, 0.16);
   border-radius: $base-border-radius;
 
   /* Animation */
