--- a/app/assets/styles/global/_inpage.scss
+++ b/app/assets/styles/global/_inpage.scss
@@ -5,6 +5,8 @@
 .inpage {
   &__header {
     @extend .antialiased;
+    position: relative;
+    z-index: 2;
     background: $accent-color;
     color: #fff;
     padding: ($global-spacing * 1.5) 0;
