--- a/app/assets/styles/global/_inpage.scss
+++ b/app/assets/styles/global/_inpage.scss
@@ -60,6 +60,12 @@
   .inpage__actions {
     @include column(4/12);
     text-align: right;
+    font-size: 0;
+
+    > * {
+      vertical-align: top;
+      margin-left: $global-spacing / 2;
+    }
   }
 
   &__body {
@@ -72,5 +78,35 @@
     > *:last-child {
       margin-bottom: 0;
     }
+  }
+}
+
+
+/* Actions
+   ========================================================================== */
+
+[class^="ipa-"],
+[class*=" ipa-"] {
+  @extend .button;
+}
+
+.ipa-plus,
+.ipa-tick, {
+  @extend .button--primary-raised-dark;
+}
+
+.ipa-plus::before {
+  @extend %collecticon-sm-plus;
+}
+
+.ipa-tick::before {
+  @extend %collecticon-sm-tick;
+}
+
+.ipa-ellipsis {
+  @extend .button--achromic, .button--text-hidden;
+
+  &::before {
+    @extend %collecticon-ellipsis-vertical;
   }
 }
