--- a/app/assets/styles/global/_modals.scss
+++ b/app/assets/styles/global/_modals.scss
@@ -184,7 +184,7 @@
    ========================================================================== */
 
 .modal__button-dismiss {
-  @extend .button, .button--medium, .button--base-unbounded, .button--text-hidden;
+  @extend .button, .button--medium, .button--primary-plain, .button--text-hidden;
   position: absolute;
   top: $global-spacing / 4;
   right: $global-spacing / 4;
@@ -221,9 +221,5 @@
 
   .modal__subtitle {
     color: rgba(#fff, 0.48);
-  }
-
-  .modal__button-dismiss {
-    @extend .button--achromic-unbounded;
   }
 }
