Include form styles

--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -65,8 +65,9 @@
 /* Global
    ========================================================================== */
 
-@import "global/labels";
 @import "global/buttons";
+@import "global/forms";
+@import "global/labels";
 @import "global/drops";
 @import "global/cards";
 @import "global/modals";
