--- a/app/assets/styles/projects/_single.scss
+++ b/app/assets/styles/projects/_single.scss
@@ -1,30 +1,43 @@
 /* ==========================================================================
-   Projects: Hub
+   Projects: Single
    ========================================================================== */
 
-/* Project list */
+.diptych {
+  @include column(6/12, $cycle: 2);
+  margin-top: $global-spacing * 2;
 
-.projects-card-list {
+  &:nth-child(1),
+  &:nth-child(2) {
+    margin-top: 0;
+  }
+}
+
+.diptych--details {
+  overflow: hidden; // Temporary
+}
+
+
+/* Scenarios list */
+
+.scenarios-card-list {
   list-style: none;
   margin: 0;
   padding: 0;
   display: flex;
-  flex-wrap: wrap;
 
   > li {
-    @include column(4/12, $cycle: 3);
+    @include column(6/12, $cycle: 2);
     margin-top: $global-spacing * 2;
     display: flex;
 
     &:nth-child(1),
-    &:nth-child(2),
-    &:nth-child(3) {
+    &:nth-child(2) {
       margin-top: 0;
     }
   }
 
   .card,
   .card__contents {
-    width: 100%;
+     width: 100%;
   }
 }
