--- a/app/assets/styles/global/_modals.scss
+++ b/app/assets/styles/global/_modals.scss
@@ -41,6 +41,7 @@
   vertical-align: middle;
   margin: ($global-spacing * 2) 0;
   text-align: left;
+  width: 100%;
   max-width: 48rem;
 
   > *:last-child {
