Fix css comment

--- a/app/assets/styles/projects/_global.scss
+++ b/app/assets/styles/projects/_global.scss
@@ -57,7 +57,7 @@
    ========================================================================== */
 
 /**
- * "mfa-" prefix stands for "drop menu action"
+ * "mfa-" prefix stands for "modal footer action"
  */
 
 [class^="mfa-"],
