Style form label small

--- a/app/assets/styles/global/_forms.scss
+++ b/app/assets/styles/global/_forms.scss
@@ -284,6 +284,10 @@ label[for] {
   font-size: 1rem;
   line-height: 1.5;
   margin: 0 0 ($global-spacing / 2) 0;
+
+  small {
+    opacity: 0.48;
+  }
 }
 
 
