--- a/app/assets/styles/projects/_hub.scss
+++ b/app/assets/styles/projects/_hub.scss
@@ -2,7 +2,9 @@
    Projects: Hub
    ========================================================================== */
 
-/* Project list */
+
+/* Projects list
+   ========================================================================== */
 
 .projects-card-list {
   list-style: none;
