--- a/app/assets/styles/global/_forms.scss
+++ b/app/assets/styles/global/_forms.scss
@@ -37,6 +37,10 @@
     opacity: 0.64;
   }
 
+  &:hover {
+    box-shadow: inset 0 -2px 0 0 rgba($base-color, 0.24);
+  }
+
   &:focus {
     outline: 0;
     box-shadow: inset 0 -2px 0 0 $link-color;
