--- a/app/assets/styles/global/_cards.scss
+++ b/app/assets/styles/global/_cards.scss
@@ -85,7 +85,7 @@ a.card__contents {
     bottom: 0;
     z-index: 2;
     content: "";
-    box-shadow: inset 0 0 0 1px $base-semi-alpha-color;
+    box-shadow: inset 0 0 0 1px $base-alpha-color;
     pointer-events: none;
   }
 }
