--- a/app/assets/styles/global/_page.scss
+++ b/app/assets/styles/global/_page.scss
@@ -116,7 +116,7 @@
   line-height: 1.25rem;
   color: tint($base-color, 64%);
   text-align: right;
-  box-shadow: inset 0 1px 0 0 rgba($base-color, 0.12);
+  box-shadow: inset 0 1px 0 0 $base-alpha-color;
 
   small {
     font-size: inherit;
