--- a/app/assets/styles/projects/_single.scss
+++ b/app/assets/styles/projects/_single.scss
@@ -110,7 +110,14 @@
   overflow: hidden; // Temporary
 
   .prose {
-    margin-bottom: $global-spacing * 3;
+    margin-bottom: $global-spacing * 2;
+  }
+
+  dl {
+
+    dt:not(:first-child) {
+      margin-top: $global-spacing * 2;
+    }
   }
 }
 
@@ -127,7 +134,7 @@
 
   > li {
     @include column(6/12, $cycle: 2);
-    margin-top: $global-spacing * 2;
+    margin-top: $global-spacing;
     display: flex;
 
     &:nth-child(1),
