--- a/app/assets/styles/global/_forms.scss
+++ b/app/assets/styles/global/_forms.scss
@@ -42,7 +42,8 @@
     box-shadow: inset 0 -2px 0 0 rgba($base-color, 0.32);
   }
 
-  &:focus {
+  &:focus,
+  &:active {
     outline: 0;
     box-shadow: inset 0 -2px 0 0 $link-color;
   }
@@ -145,6 +146,11 @@ textarea.form__control {
   > *:last-child {
     margin-bottom: 0;
   }
+}
+
+.form__group--attached {
+  margin-top: - $global-spacing;
+  min-height: 2rem;
 }
 
 
@@ -373,12 +379,12 @@ label[for] {
 
   .form__option__ui {
     position: absolute;
-    top: 0.25rem;
-    left: 0;;
-    height: 1rem;
-    width: 1rem;
-    box-shadow: inset 0 0 0 2px rgba($base-color, 0.16);
-    background: tint($base-color, 64%);
+    top: 0.125rem;
+    left: 0;
+    height: 1.25rem;
+    width: 1.25rem;
+    box-shadow: inset 0 0 0 1px rgba($base-color, 0.16);
+    background: transparent;
     transition: all 0.16s ease 0s;
 
     &::before {
@@ -391,16 +397,21 @@ label[for] {
     }
   }
 
+  &:hover {
+    .form__option__ui {
+      box-shadow: inset 0 0 0 2px rgba($base-color, 0.32);
+    }
+  }
+
   &:focus,
   &:active {
     .form__option__ui {
-      box-shadow: inset 0 0 0 1px rgba($base-color, 0.32);
+      box-shadow: inset 0 0 0 2px $link-color;
     }
   }
 
   input:checked ~ .form__option__ui {
-    background: $primary-color;
-    box-shadow: none;
+    box-shadow: inset 0 0 0 2px $link-color;
 
     &::before {
       opacity: 1;
@@ -418,7 +429,7 @@ label[for] {
       content: "";
       height: 0.5rem;
       width: 0.5rem;
-      background: #fff;
+      background: $link-color;
     }
   }
 }
@@ -431,7 +442,7 @@ label[for] {
 
     &:before {
       @extend %collecticon-sm-tick;
-      color: #fff;
+      color: $link-color;
     }
   }
 }
@@ -495,31 +506,5 @@ label[for] {
 
   > *:last-child {
     margin-bottom: 0;
-  }
-}
-
-/* Form group animation
-   ========================================================================== */
-
-.form__group-enter {
-  transform: translate3d(0, 0, 0);
-  transition: opacity 0.32s ease 0s, visibility 0.32s linear 0s;
-  opacity: 0;
-  visibility: hidden;
-
-  &.form__group-enter-active {
-    opacity: 1;
-    visibility: visible;
-  }
-}
-
-.form__group-leave {
-  transition: opacity 0.32s ease 0s, visibility 0.32s linear 0s;
-  opacity: 1;
-  visibility: visible;
-
-  &.form__group-leave-active {
-    opacity: 0;
-    visibility: hidden;
   }
 }
