Include scenario actions

--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -84,6 +84,11 @@
 @import "projects/single";
 
 
+/* Scenarios
+   ========================================================================== */
+
+@import "scenarios/global";
+
 /* UhOh
    ========================================================================== */
 
