--- a/app/assets/styles/projects/_global.scss
+++ b/app/assets/styles/projects/_global.scss
@@ -16,7 +16,9 @@
 }
 
 .ipa-plus,
-.ipa-tick, {
+.ipa-tick,
+.ipa-cog,
+.ipa-arrow-loop {
   @extend .button--primary-raised-dark;
 }
 
@@ -36,6 +38,30 @@
   }
 }
 
+.ipa-download,
+.ipa-pencil {
+   @extend .button--primary-raised-light;
+}
+
+.ipa-download::before {
+  @extend %collecticon-download-3;
+}
+
+.ipa-pencil::before {
+  @extend %collecticon-pencil;
+}
+
+.ipa-arrow-loop::before {
+  @extend %collecticon-arrow-loop;
+}
+
+.ipa-cog {
+  @extend .button--text-hidden;
+
+  &::before {
+    @extend %collecticon-cog;
+  }
+}
 
 /* Drop menu actions
    ========================================================================== */
@@ -50,6 +76,10 @@
 
 .dmi-trash::before {
   @extend %collecticon-trash-bin;
+}
+
+.dmi-copy::before {
+  @extend %collecticon-page-copy;
 }
 
 
