--- a/app/assets/styles/core/_tables.scss
+++ b/app/assets/styles/core/_tables.scss
@@ -8,7 +8,7 @@
   margin-bottom: $global-spacing;
 
   th, td  {
-    padding: 0.75rem 0.5rem;
+    padding: $global-spacing / 2;
     vertical-align: top;
     text-align: left;
     box-shadow: inset 0 -1px 0 0 $base-alpha-color;
@@ -16,12 +16,12 @@
 
   th:first-child,
   td:first-child {
-    padding-left: 1rem;
+    padding-left: $global-spacing;
   }
 
   th:last-child,
   td:last-child {
-    padding-right: 1rem;
+    padding-right: $global-spacing;
   }
 
   thead th {
@@ -30,8 +30,10 @@
     line-height: 1.25rem;
     vertical-align: bottom;
     box-shadow: inset 0 -2px 0 0 $base-alpha-color;
+
     a {
       display: inline-block;
+
       &.table__sort:after {
         font-size: 1rem;
         margin-left: 0.375rem;
@@ -39,17 +41,23 @@
         display: inline-block;
         line-height: inherit !important;
       }
+
       &.table__sort--none:after {
         @extend %collecticon-sort-none;
       }
+
       &.table__sort--asc:after {
         @extend %collecticon-sort-asc;
       }
+
       &.table__sort--desc:after {
         @extend %collecticon-sort-desc;
       }
     }
-    a, a:visited, a:hover {
+
+    a,
+    a:visited,
+    a:hover {
       color: inherit;
     }
   }
@@ -83,6 +91,7 @@
   overflow-y: hidden;
   width: 100%;
   margin-bottom: $global-spacing;
+
   > *:last-child {
     margin-bottom: 0;
   }
