--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -58,6 +58,7 @@
 @import "core/base";
 @import "core/collecticons"; // Webfont icon library: Collecticons
 @import "core/typography";
+@import "core/tables";
 @import "core/media";
 @import "core/utilities";
 
