Include alert styles

--- a/app/assets/styles/main.scss
+++ b/app/assets/styles/main.scss
@@ -72,6 +72,7 @@
 @import "global/drops";
 @import "global/cards";
 @import "global/modals";
+@import "global/alerts";
 @import "global/page";
 @import "global/inpage";
 @import "global/loading";
