--- a/app/assets/styles/settings/_variables.scss
+++ b/app/assets/styles/settings/_variables.scss
@@ -12,7 +12,7 @@ $secondary-color: #287895;                              // Jelly Bean
 $accent-color: #00B380;                                 // Dark green
 
 $danger-color: #FF5722;                                 // Red
-$success-color: $primary-color;                         // Green
+$success-color: $accent-color;                          // Dark green
 $warning-color: #f6d55f;                                // Yellow
 $info-color: #35A2D8;                                   // Blue
 
