--- a/app/assets/styles/core/_tables.scss
+++ b/app/assets/styles/core/_tables.scss
@@ -62,6 +62,14 @@
     }
   }
 
+  tbody tr:last-child td {
+    box-shadow: none;
+  }
+
+  tfoot td {
+    box-shadow: inset 0 2px 0 0 $base-alpha-color;
+  }
+
   &--zebra {
     tbody tr:nth-of-type(odd) {
       background: rgba($base-color, 0.04);
